--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -6,7 +6,8 @@
 
 body {
   font-family: 'Lora';
-  background-image: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url("../img/bg.jpg");
+  /* background-image: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url("../img/bg.jpg"); */
+  background-image: linear-gradient(rgba(217, 193, 170, 0.65), rgba(217, 193, 170, 0.65));
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -44,7 +45,7 @@ p {
 }
 
 .site-heading .site-heading-lower {
-  font-size: 5rem;
+  font-size: 4rem;
   font-weight: 100;
   line-height: 4rem;
 }
@@ -252,4 +253,15 @@ p {
 
 .font-weight-light {
   font-weight: 100 !important;
+}
+
+#map {
+  height: 400px;
+  width: 100%;
+  border: 0;
+  margin-top: 0px;
+ }
+
+#contact {
+  margin-bottom: 0px;
 }
