fix bug trigger phone

--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -265,3 +265,19 @@ p {
 #contact {
   margin-bottom: 0px;
 }
+
+#phone {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  font-size: 1em;
+  text-decoration: none;
+}
+
+#phone .section-heading-lower {
+  font-size: 1em !important;
+}
+
+#phone a {
+  text-decoration: none;
+}
