--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -7,7 +7,7 @@
 body {
   font-family: 'Lora';
   /* background-image: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url("../img/bg.jpg"); */
-  background-image: linear-gradient(rgba(217, 193, 170, 0.65), rgba(217, 193, 170, 0.65));
+  background-image: linear-gradient(rgba(250, 247, 240, 0.65), rgba(250, 247, 240, 0.65));
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -48,6 +48,7 @@ p {
   font-size: 4rem;
   font-weight: 100;
   line-height: 4rem;
+  color: black;
 }
 
 .page-section {
@@ -76,21 +77,21 @@ p {
 }
 
 #mainNav {
-  background-color: rgba(47, 23, 15, 0.9);
+  background-color: #e6a756;
   font-family: 'Raleway';
 }
 
 #mainNav .navbar-brand {
-  color: #e6a756;
+  color: rgba(47, 23, 15, 1);
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(255, 255, 255, 0.9);
   font-weight: 800;
 }
 
 #mainNav .navbar-nav .nav-item.active .nav-link {
-  color: #e6a756;
+  color: rgba(47, 23, 15, 0.8);
 }
 
 @media (min-width: 992px) {
@@ -98,10 +99,10 @@ p {
     font-size: 0.9rem;
   }
   #mainNav .navbar-nav .nav-item .nav-link:hover {
-    color: rgba(255, 255, 255, 0.4);
+    color: rgba(47, 23, 15, 0.8);
   }
   #mainNav .navbar-nav .nav-item.active .nav-link:hover {
-    color: #e6a756;
+    color: rgba(47, 23, 15, 0.8);
   }
 }
 
@@ -121,10 +122,10 @@ p {
 @media (min-width: 992px) {
   .intro .intro-img {
     width: 75%;
-    float: right;
+    float: left;
   }
   .intro .intro-text {
-    left: 0;
+    left: 50%;
     width: 60%;
     margin-top: 3rem;
     position: absolute;
@@ -139,7 +140,7 @@ p {
 
 @media (min-width: 1200px) {
   .intro .intro-text {
-    width: 45%;
+    width: 50%;
   }
 }
 
@@ -226,7 +227,13 @@ p {
 }
 
 .footer {
-  background-color: rgba(47, 23, 15, 0.9);
+  background-color: #e6a756;
+  color: white;
+}
+
+.footer a {
+  text-decoration: none;
+  color: white;
 }
 
 .text-primary {
@@ -281,4 +288,8 @@ p {
 
 #phone a {
   text-decoration: none;
+}
+
+#name {
+  margin-top: 1em;
 }
