--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,11 @@ p {
   font-family: 'Raleway';
 }
 
+.site-heading a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .site-heading .site-heading-upper {
   display: block;
   font-size: 2rem;
